Configure Log4j2 and Added PropertiesUtils for lambda properties to configure Filter package